# Cap

./: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  biome.json  package.json  pnpm-lock.yaml  tsconfig.json
apps/cli/: Cargo.toml
apps/cli/src/: record.rs
apps/desktop/: app.config.ts  package.json  postcss.config.cjs  tsconfig.json
apps/desktop/scripts/: prepare.js
apps/desktop/src/: App.tsx  app.tsx  entry-client.tsx  entry-server.tsx  icons.tsx
apps/desktop/src-tauri/: Cargo.toml  dump_results.mm  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: automation.rs  camera.rs  deeplink_actions.rs  display_utils.rs  general_settings.rs  hotkeys.rs  lib.rs  main.rs  media.rs  permissions.rs  recording.rs  screenshot_editor.rs  target_select_overlay.rs  tray.rs  utils.rs  window_position_persistence.rs  windows.rs
apps/desktop/src-tauri/src/migrations/: mod.rs  v1_rename_projects.rs
apps/desktop/src-tauri/src/platform/: mod.rs
apps/desktop/src-tauri/src/platform/macos/: mod.rs  sc_shareable_content.rs
apps/desktop/src-tauri/src/platform/macos/overlay/: mod.rs  ops.rs  registry.rs
apps/desktop/src-tauri/src/platform/macos/solarium/: mod.rs  ops.rs  registry.rs  temp.mm  types.rs
apps/desktop/src/app/: page.tsx
apps/desktop/src/components/: AreaOccluder.tsx  CapErrorBoundary.tsx  CropAreaRenderer.tsx  Cropper.tsx  CropperOLD.tsx  CropperTool.tsx  ElasticSurface.tsx  GlassEffectContainer.tsx  Material.tsx  Mode.tsx  Occluder.tsx  Platform.tsx  ProgressiveMask.tsx  RecoveryToast.tsx  ScrollView.tsx  Sidebar.tsx  SidebarToggleIcon.tsx  SignInButton.tsx  SplitView.tsx  Toggle.tsx  Toolbar.tsx  Tooltip.tsx  UserProfileButton.tsx  VirtualScrollbar.tsx  VirtualScrollbarPrimitive.tsx  WindowActions.tsx  WindowShell.tsx  WindowView.tsx  lens.tsx  primitive.tsx  smoothed.tsx  solarium.tsx
apps/desktop/src/components/primitive/: ProgressiveBlur.tsx  VirtualScrollbar.css  VirtualScrollbar.tsx
apps/desktop/src/components/solarium/: ElasticSlider.tsx  FilterGlassEffect.tsx  SegmentedControl.tsx  SolariumSlider.tsx  drag.ts  drag.tsx  kinetic.ts  sliderMath.ts  velocity.ts
apps/desktop/src/components/toolbar/: ToolbarLayoutPrimitive.tsx
apps/desktop/src/components/windows/: Camera.tsx  Permissions.tsx
apps/desktop/src/routes/: (window-chrome).tsx  area-select.tsx  camera.tsx  capture-area-selection.tsx  capture-area.tsx  debug-library.tsx  debug.tsx  in-progress-recording.tsx  new-settings.tsx  recordings-overlay.tsx  target-select-overlay.tsx  window-capture-occluder.tsx
apps/desktop/src/routes/(window-chrome)/: (main).tsx  Context.tsx  new-settings.tsx  onboarding.tsx  settings.tsx  setup.tsx  update.tsx  upgrade.tsx
apps/desktop/src/routes/capture-area-selection/: index.tsx  selection.tsx
apps/desktop/src/routes/editor/: AspectRatioSelect.tsx  CaptionsTab.tsx  ConfigSidebar.tsx  Editor.tsx  EditorErrorScreen.tsx  Header.tsx  (+14 more)
apps/desktop/src/styles/: app.css  easings.css  fade.css  solarium.css  theme.css  window-chrome.css
apps/desktop/src/utils/: RevealWindow.tsx  UserAccountProvider.tsx  canvas.ts  macos-window-material.ts  material-hosting.ts  smoothed-global.ts  solarium.ts  solarium.tsx  solid-click-hooks.ts  springs.ts  tauri.ts  titlebar-state.ts  window-chrome.ts
apps/storybook/: package.json  tailwind.config.js  vite.config.ts  vite.config.ts.timestamp-1735325995918-46a167c39672.mjs
apps/storybook/.storybook/: main.ts  preview.ts
apps/web/: next.config.mjs
crates/media/src/platform/: mod.rs
crates/media/src/sources/: screen_capture.rs
crates/migrator/: Cargo.toml
crates/migrator/src/: migrator.rs  store_migration.rs
crates/migrator/src/migrations/: m_v1.rs  mod.rs
crates/project/: Cargo.toml
crates/project/src/: configuration.rs  meta.rs
crates/recording/: Cargo.toml
crates/recording/src/: screenshot.rs  studio_recording.rs
crates/recording/src/output_pipeline/: core.rs
crates/rendering/src/: lib.rs
crates/rendering/src/layers/: magnifier.rs  mod.rs
crates/rendering/src/shaders/: magnifier.wgsl
crates/utils/src/: lib.rs
scripts/: setup.js
(+71 files in other folders)
