[package]
name = "cap"
version = "0.0.0"
description = "Effortless, instant screen sharing. Open source and cross-platform."
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }
ffmpeg-sidecar = "0.5.1"

[dependencies]
tauri = { version = "2.0.0-beta.22", features = [
  "macos-private-api",
  "devtools",
  "tray-icon",
] }

# tauri-plugin-oauth = { git = "https://github.com/FabianLars/tauri-plugin-oauth", branch = "main" } # Use deep-link instead.
tauri-plugin-positioner = "2.0.0-beta"
tauri-plugin-deep-link = "2.0.0-beta"
tauri-specta = { version = "=2.0.0-rc.11", features = [
  "javascript",
  "typescript",
] }
specta = "=2.0.0-rc.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ffmpeg-sidecar = "0.5.1"
cpal = "0.15.2"
which = "4.2.2"
tokio = { version = "1.35.1", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["io", "codec"] }
futures = "0.3.30"
reqwest = { version = "0.11.23", features = ["json", "multipart", "stream"] }
chrono = "0.4.33"
dotenv_codegen = "0.15.0"
byteorder = "1.4.3"
bytemuck = "1.14.3"
regex = "1"
capture = { path = "./src/capture" }
image = "0.24.9"
sentry = "0.32.2"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
winit = "0.29.15"
jpeg-encoder = "0.6.0"
nix = "0.20.0"
urlencoding = "2.1.2"
bytes = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
